# curl-parser

./: Cargo.toml  Makefile  README.md  Readme.md
examples/: delete  get_with_headers  patch_with_multiline  post_with_body
src/: curl_grammar.pest  lib.rs  main.rs
tests/: parse_test.rs
